--- a/Python_DataStructures.ipynb
+++ b/Python_DataStructures.ipynb
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "id": "1291b485",
    "metadata": {
     "deletable": false,
@@ -111,11 +111,20 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A data structure is a way of storing and organizingdata according to a certain format or structure.\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "print(\"A data structure is a way of storing and organizing\\\n",
+    "data according to a certain format or structure.\")"
    ]
   },
   {
@@ -147,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "52f133eb",
    "metadata": {
     "deletable": false,
@@ -163,11 +172,24 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['blake dahl', 40, 3.14, True, ['Maverick', 'Goose', 'Iceman', 'Cougar']]\n",
+      "40\n",
+      "Goose\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "new_list=[\"blake dahl\", 40, 3.14, 4>3, [\"Maverick\", \"Goose\", \"Iceman\",\"Cougar\"]]\n",
+    "print(new_list)\n",
+    "print(new_list[1])\n",
+    "print(new_list[4][1])"
    ]
   },
   {
@@ -200,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "0efd19d5",
    "metadata": {
     "deletable": false,
@@ -216,11 +238,25 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['blake dahl', 40, 3.14, True, ['Maverick', 'Goose', 'Iceman', 'Cougar']]\n",
+      "['TMNT', 28, 9.95, False, ['Leo', 'Don', 'Raph', 'Mich']]\n",
+      "['blake dahl', 40, 3.14, True, ['Maverick', 'Goose', 'Iceman', 'Cougar'], 'TMNT', 28, 9.95, False, ['Leo', 'Don', 'Raph', 'Mich']]\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "second_list=[\"TMNT\", 28, 9.95, 6<=5, [\"Leo\", \"Don\", \"Raph\", \"Mich\"] ]\n",
+    "print(new_list)\n",
+    "print(second_list)\n",
+    "merged_list=new_list+second_list\n",
+    "print(merged_list)"
    ]
   },
   {
@@ -251,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "8a1ace45",
    "metadata": {
     "deletable": false,
@@ -267,11 +303,25 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['blake dahl', 40, 3.14, True, ['Maverick', 'Goose', 'Iceman', 'Cougar'], 'TMNT', 28, 9.95, False, ['Leo', 'Don', 'Raph', 'Mich'], 'blake dahl', 40, 3.14, True, ['Maverick', 'Goose', 'Iceman', 'Cougar'], 'blake dahl', 40, 3.14, True, ['Maverick', 'Goose', 'Iceman', 'Cougar'], 'blake dahl', 40, 3.14, True, ['Maverick', 'Goose', 'Iceman', 'Cougar'], 5, 'blake dahl', 40, 'blake dahl', 40, 3.14, True, ['Maverick', 'Goose', 'Iceman', 'Cougar']]\n",
+      "['first', 'blake dahl', 40, 3.14, True, ['Maverick', 'Goose', 'Iceman', 'Cougar'], 'TMNT', 28, 9.95, False, ['Leo', 'Don', 'Raph', 'Mich'], 'blake dahl', 40, 3.14, True, ['Maverick', 'Goose', 'Iceman', 'Cougar'], 'blake dahl', 40, 3.14, True, ['Maverick', 'Goose', 'Iceman', 'Cougar'], 'blake dahl', 40, 3.14, True, ['Maverick', 'Goose', 'Iceman', 'Cougar'], 5, 'blake dahl', 40, 'blake dahl', 40, 3.14, True, ['Maverick', 'Goose', 'Iceman', 'Cougar'], 5]\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "merged_list.extend(new_list)\n",
+    "print(merged_list)\n",
+    "merged_list.append(5)\n",
+    "merged_list.insert(0,\"first\")\n",
+    "print(merged_list)\n",
+    "\n"
    ]
   },
   {
@@ -303,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "6ea50639",
    "metadata": {
     "deletable": false,
@@ -319,11 +369,25 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['blake dahl', 40, 3.14, True, ['Maverick', 'Goose', 'Iceman', 'Cougar'], 'TMNT', 28, 9.95, False, ['Leo', 'Don', 'Raph', 'Mich'], 'blake dahl', 40, 3.14, True, ['Maverick', 'Goose', 'Iceman', 'Cougar'], 'blake dahl', 40, 3.14, True, ['Maverick', 'Goose', 'Iceman', 'Cougar'], 'blake dahl', 40, 3.14, True, ['Maverick', 'Goose', 'Iceman', 'Cougar'], 5, 'blake dahl', 40, 'blake dahl', 40, 3.14, True, ['Maverick', 'Goose', 'Iceman', 'Cougar']]\n",
+      "2\n",
+      "True\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "merged_list.pop()\n",
+    "merged_list.remove(\"first\")\n",
+    "print(merged_list)\n",
+    "print(merged_list.index(3.14))\n",
+    "print(\"first\"not in merged_list)"
    ]
   },
   {
@@ -351,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "1ecdaecd",
    "metadata": {
     "deletable": false,
@@ -367,12 +431,21 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[5, 10, 20, 30, 40, 50.4, 100]\n"
+     ]
+    }
+   ],
    "source": [
     "num_list = [20, 40, 10, 50.4, 30, 100, 5]\n",
     "\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "num_list.sort()\n",
+    "print(num_list)"
    ]
   },
   {
@@ -402,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "933c83f5",
    "metadata": {
     "deletable": false,
@@ -418,12 +491,26 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[10, 20, 30, 40, 50]\n",
+      "[20, 40, 60, 80, 100]\n",
+      "[40, 80]\n"
+     ]
+    }
+   ],
    "source": [
     "nums = [10, 20, 30, 40, 50]\n",
     "\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "nums_double=[n*2 for n in nums]\n",
+    "nums_double_cond=[n*2 for n in nums if n % 4==0]\n",
+    "print(nums)\n",
+    "print(nums_double)\n",
+    "print(nums_double_cond)"
    ]
   },
   {
@@ -452,7 +539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "d1d96c96",
    "metadata": {
     "deletable": false,
@@ -468,11 +555,23 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "cities=(\"London\", \"Paris\", \"Los Angeles\", \"Tokyo\")\n",
+    "cities.index(\"Tokyo\")"
    ]
   },
   {
@@ -500,7 +599,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "a923ae46",
    "metadata": {
     "deletable": false,
@@ -516,11 +615,20 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A tuple is similar to a list, except tuple elements are immutable.However,a tuple can contain mutable elements\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "print(\"A tuple is similar to a list, except tuple elements are immutable.\\\n",
+    "However,a tuple can contain mutable elements\")"
    ]
   },
   {
@@ -551,7 +659,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "d0daad85",
    "metadata": {
     "deletable": false,
@@ -567,11 +675,26 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{}\n",
+      "{'Batman': 468426, 'Cersei': 237734, 'Ghostbusters': 44678}\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "empty_dict={}\n",
+    "print(empty_dict)\n",
+    "\n",
+    "phone_book = {\"Batman\":468426,\n",
+    "             \"Cersei\":237734,\n",
+    "              \"Ghostbusters\":44678}\n",
+    "print(phone_book)"
    ]
   },
   {
@@ -603,7 +726,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "id": "bd7c39e8",
    "metadata": {
     "deletable": false,
@@ -619,11 +742,24 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{}\n",
+      "{'Batman': 468426, 'Cersei': 237734, 'Ghostbusters': 44678}\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "empty_dict=dict()\n",
+    "print(empty_dict)\n",
+    "\n",
+    "phone_book=dict(Batman=468426, Cersei=237734, Ghostbusters=44678)\n",
+    "print(phone_book)"
    ]
   },
   {
@@ -652,7 +788,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "id": "c7091716",
    "metadata": {
     "deletable": false,
@@ -668,11 +804,21 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "237734\n",
+      "44678\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "print(phone_book[\"Cersei\"])\n",
+    "print(phone_book.get(\"Ghostbusters\"))"
    ]
   },
   {
@@ -707,7 +853,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "id": "40a60788",
    "metadata": {
     "deletable": false,
@@ -723,12 +869,30 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'Batman': 468426, 'Cersei': 237734, 'Ghostbusters': 44678, 'Godzilla': 46394}\n",
+      "{'Batman': 468426, 'Cersei': 237734, 'Ghostbusters': 44678, 'Godzilla': 9000}\n",
+      "{'Cersei': 237734, 'Ghostbusters': 44678, 'Godzilla': 9000}\n",
+      "{'Cersei': 237734, 'Ghostbusters': 44678, 'Godzilla': 37623, 'Catwoman': 67423, 'Jaime': 237734}\n"
+     ]
+    }
+   ],
    "source": [
     "second_phone_book = {\"Catwoman\": 67423, \"Jaime\": 237734, \"Godzilla\": 37623}\n",
     "\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "phone_book[\"Godzilla\"]=46394\n",
+    "print(phone_book)\n",
+    "phone_book[\"Godzilla\"]=9000\n",
+    "print(phone_book)\n",
+    "del phone_book[\"Batman\"]\n",
+    "print(phone_book)\n",
+    "phone_book.update(second_phone_book)\n",
+    "print(phone_book)"
    ]
   },
   {
@@ -763,7 +927,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "id": "69021f25",
    "metadata": {
     "deletable": false,
@@ -779,11 +943,29 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1408, (True, False), 3.142, 'Educative'}\n",
+      "set()\n",
+      "{1}\n",
+      "{1, 2, 3, 4, 5, 6}\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "random_set={\"Educative\", 1408, 3.142, (True, False)}\n",
+    "print(random_set)\n",
+    "empty_set=set()\n",
+    "print(empty_set)\n",
+    "empty_set.add(1)\n",
+    "print(empty_set)\n",
+    "empty_set.update([2, 3, 4, 5, 6])\n",
+    "print(empty_set)"
    ]
   },
   {
@@ -811,7 +993,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "id": "573001eb",
    "metadata": {
     "deletable": false,
@@ -827,13 +1009,21 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1, 2, 3, 4, 'a', 'c', 'd', 'b'}\n"
+     ]
+    }
+   ],
    "source": [
     "set_A = {1, 2, 3, 4}\n",
     "set_B = {'a', 'b', 'c', 'd'}\n",
     "\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "print(set_A | set_B)"
    ]
   },
   {
@@ -861,7 +1051,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "id": "09a4cdf7",
    "metadata": {
     "deletable": false,
@@ -877,13 +1067,21 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "set()\n"
+     ]
+    }
+   ],
    "source": [
     "set_A = {1, 2, 3, 4}\n",
     "set_B = {'a', 'b', 'c', 'd'}\n",
     "\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "print(set_A & set_B)"
    ]
   },
   {
@@ -912,7 +1110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "id": "23861748",
    "metadata": {
     "deletable": false,
@@ -928,13 +1126,23 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1, 3}\n",
+      "{8, 16}\n"
+     ]
+    }
+   ],
    "source": [
     "set_A = {1, 2, 3, 4}\n",
     "set_B = {2, 8, 4, 16}\n",
     "\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "print(set_A - set_B)\n",
+    "print(set_B - set_A)"
    ]
   },
   {
@@ -962,7 +1170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "id": "bf1a4dc3",
    "metadata": {
     "deletable": false,
@@ -978,7 +1186,20 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('Anakin', 'Darth Vader', 1000)\n",
+      "{'Darth Vader', 1000, 'Anakin'}\n",
+      "{1: 'Anakin', 2: 'Darth Vader', 3: 1000}\n",
+      "['Anakin', 'Darth Vader', 1000]\n",
+      "['Darth Vader', 1000, 'Anakin']\n",
+      "[1, 2, 3]\n"
+     ]
+    }
+   ],
    "source": [
     "star_wars_tup = (\"Anakin\", \"Darth Vader\", 1000)\n",
     "print(star_wars_tup)\n",
@@ -988,7 +1209,12 @@
     "print(star_wars_dict)\n",
     "\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "star_wars_list=list(star_wars_tup)\n",
+    "print(star_wars_list)\n",
+    "star_wars_list=list(star_wars_set)\n",
+    "print(star_wars_list)\n",
+    "star_wars_list=list(star_wars_dict)\n",
+    "print(star_wars_list)"
    ]
   },
   {
@@ -1016,7 +1242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "id": "311be910",
    "metadata": {
     "deletable": false,
@@ -1032,7 +1258,20 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Anakin', 'Darth Vader', 1000]\n",
+      "{'Darth Vader', 1000, 'Anakin'}\n",
+      "{1: 'Anakin', 2: 'Darth Vader', 3: 1000}\n",
+      "('Anakin', 'Darth Vader', 1000)\n",
+      "('Darth Vader', 1000, 'Anakin')\n",
+      "(1, 2, 3)\n"
+     ]
+    }
+   ],
    "source": [
     "star_wars_list = [\"Anakin\", \"Darth Vader\", 1000]\n",
     "print(star_wars_list)\n",
@@ -1042,7 +1281,12 @@
     "print(star_wars_dict)\n",
     "\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "star_wars_tup=tuple(star_wars_list)\n",
+    "print(star_wars_tup)\n",
+    "star_wars_tup=tuple(star_wars_set)\n",
+    "print(star_wars_tup)\n",
+    "star_wars_tup=tuple(star_wars_dict)\n",
+    "print(star_wars_tup)"
    ]
   },
   {
@@ -1070,7 +1314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "id": "e1beeefb",
    "metadata": {
     "deletable": false,
@@ -1086,7 +1330,20 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Anakin', 'Darth Vader', 1000]\n",
+      "('Anakin', 'Darth Vader', 1000)\n",
+      "{1: 'Anakin', 2: 'Darth Vader', 3: 1000}\n",
+      "{'Darth Vader', 1000, 'Anakin'}\n",
+      "{'Darth Vader', 1000, 'Anakin'}\n",
+      "{1, 2, 3}\n"
+     ]
+    }
+   ],
    "source": [
     "star_wars_list = [\"Anakin\", \"Darth Vader\", 1000]\n",
     "print(star_wars_list)\n",
@@ -1096,7 +1353,12 @@
     "print(star_wars_dict)\n",
     "\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "star_wars_set=set(star_wars_list)\n",
+    "print(star_wars_set)\n",
+    "star_wars_set=set(star_wars_tup)\n",
+    "print(star_wars_set)\n",
+    "star_wars_set=set(star_wars_dict)\n",
+    "print(star_wars_set)"
    ]
   },
   {
@@ -1124,7 +1386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "id": "7570d1c3",
    "metadata": {
     "deletable": false,
@@ -1140,7 +1402,20 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1, 'Anakin'], [2, 'Darth Vader'], [3, 1000]]\n",
+      "((1, 'Anakin'), (2, 'Darth Vader'), (3, 1000))\n",
+      "{(1, 'Anakin'), (2, 'Darth Vader'), (3, 1000)}\n",
+      "{1: 'Anakin', 2: 'Darth Vader', 3: 1000}\n",
+      "{1: 'Anakin', 2: 'Darth Vader', 3: 1000}\n",
+      "{1: 'Anakin', 2: 'Darth Vader', 3: 1000}\n"
+     ]
+    }
+   ],
    "source": [
     "star_wars_list = [[1,\"Anakin\"], [2,\"Darth Vader\"], [3, 1000]]\n",
     "print (star_wars_list)\n",
@@ -1150,13 +1425,18 @@
     "print (star_wars_set)\n",
     "\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "star_wars_dict=dict(star_wars_list)\n",
+    "print(star_wars_dict)\n",
+    "star_wars_dict=dict(star_wars_tup)\n",
+    "print(star_wars_dict)\n",
+    "star_wars_dict=dict(star_wars_set)\n",
+    "print(star_wars_dict)"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1170,7 +1450,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
